[tool.poetry]
name = "amzn-customer-reviews-lens"
version = "0.1.0"
description = "This tool will be used to find the categories, subcategories or sentiment around user reviews on amazon platform."
authors = ["chetan chauhan <chetanknmiet@gmail.com>"]
readme = "README.md"
packages = [{include = "amzn_customer_reviews_lens"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
ruff = "^0.4.9"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
